# screenlock

./: CMakeLists.txt  Main.qml  README.md  main.cpp
include/: dbusmanager.h
src/: dbusmanager.cpp  main.cpp
